@@ -338,7 +338,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="itemPreferences">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_Preferences...</property>
+		      <property name="label" translatable="yes">_Preferences</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_itemPreferences_activate" last_modification_time="Sat, 29 Oct 2005 11:29:01 GMT"/>
 		      <accelerator key="P" modifiers="GDK_CONTROL_MASK" signal="activate"/>
